--- a/rhat/rhat.html
+++ b/rhat/rhat.html
@@ -556,7 +556,7 @@
   <div id="toc" style="min-width: 5em;">
     <ol>
       <li>
-        <a href="#the-rhat-unit-vector" raw="# The $\rhat$ Unit Vector" lo="8" class="highlighted">
+        <a href="#the-rhat-unit-vector" raw="# The $\rhat$ Unit Vector" lo="8">
           <span class="toctext">The <span len="7" raw="_\rhat_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.7079em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7079em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">r</span></span><span style="top:-3.0134em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1944em;"><span class="mord">^</span></span></span></span></span></span></span></span></span></span> Unit Vector</span>
         </a>
         <ol class="toc" style="display: none;">
@@ -649,7 +649,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="8" lf="8" class="highlighted"><a name="the-rhat-unit-vector" number="1" lo="8" raw="# The $\rhat$ Unit Vector" class="anchor hanchor active" href="#the-rhat-unit-vector"><span class="hnumber">1</span>&nbsp;<span class="htext">The <span len="7" raw="_\rhat_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.7079em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7079em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">r</span></span><span style="top:-3.0134em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1944em;"><span class="mord">^</span></span></span></span></span></span></span></span></span></span> Unit Vector</span></a></h1>
+        <h1 lo="8" lf="8"><a name="the-rhat-unit-vector" number="1" lo="8" raw="# The $\rhat$ Unit Vector" class="anchor hanchor" href="#the-rhat-unit-vector"><span class="hnumber">1</span>&nbsp;<span class="htext">The <span len="7" raw="_\rhat_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.7079em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7079em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">r</span></span><span style="top:-3.0134em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1944em;"><span class="mord">^</span></span></span></span></span></span></span></span></span></span> Unit Vector</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">8</span></div>
       </div>
       <div class="block">
@@ -1245,7 +1245,7 @@ c-16-25.333-24-45-24-59z"></path>
       </div>
       <div class="block">
         <div class="inline-html" lo="90" lf="105">
-          <div class="solutionstrue" style="display: none;">
+          <div class="solutionstrue">
             <div class="block">
               <p padlength="0"><strong type="md">Solution</strong></p>
             </div>
@@ -1364,7 +1364,7 @@ M834 80h400000v40h-400000z"></path>
               </ol>
             </div>
           </div>
-          <div class="solutionsfalse" style="display: block;">
+          <div class="solutionsfalse">
             <div class="block">
               <div class="inline-html">
                 <img src="../Electric_Force/figures/grid.svg" style="width:100%">
@@ -1654,7 +1654,7 @@ c-16-25.333-24-45-24-59z"></path>
       </div>
       <div class="block">
         <div class="inline-html" lo="153" lf="171">
-          <div class="solutionstrue" style="display: none;">
+          <div class="solutionstrue">
             <div class="block">
               <p padlength="0"><strong raw="{\bf Solution}" markerlength="4"> Solution</strong>:</p>
             </div>
@@ -1776,7 +1776,7 @@ M834 80h400000v40h-400000z"></path>
               </ol>
             </div>
           </div>
-          <div class="solutionsfalse" style="display: block;">
+          <div class="solutionsfalse">
             <div class="block">
               <div class="inline-html">
                 <img src="../Electric_Force/figures/grid.svg" style="width:100%">
