Gauss_Law updates

--- a/Gauss_Law/Gauss_Law.html
+++ b/Gauss_Law/Gauss_Law.html
@@ -556,7 +556,7 @@
   <div id="toc" style="min-width: 5em;">
     <ol>
       <li>
-        <a href="#introduction" raw="# Introduction" lo="5" class="">
+        <a href="#introduction" raw="# Introduction" lo="5" class="highlighted">
           <span class="toctext">Introduction</span>
         </a>
       </li>
@@ -591,7 +591,7 @@
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="5" lf="5" class=""><a name="introduction" number="1" lo="5" raw="# Introduction" class="anchor hanchor" href="#introduction"><span class="hnumber">1</span>&nbsp;<span class="htext">Introduction</span></a></h1>
+        <h1 lo="5" lf="5" class="highlighted"><a name="introduction" number="1" lo="5" raw="# Introduction" class="anchor hanchor" href="#introduction"><span class="hnumber">1</span>&nbsp;<span class="htext">Introduction</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">5</span></div>
       </div>
       <div class="block">
@@ -661,7 +661,7 @@ c-16-25.333-24-45-24-59z"></path>
       </div>
       <div class="block">
         <div class="inline-html" lo="22" lf="22">
-          <img src="figures/Flux_Differential.svg" width="10%">
+          <img src="figures/Flux_Differential.svg" width="15%">
         </div>
         <div class="block-info" style="display: none;"><span class="line-numbers">22</span></div>
       </div>
@@ -708,12 +708,7 @@ c-16-25.333-24-45-24-59z"></path>
         <div class="block-info" style="display: none;"><span class="line-numbers">32-34</span></div>
       </div>
       <div class="block">
-        <div class="inline-html" lo="36" lf="36">
-          <div class="newpage">
-            <div class="page-break" style="font-size:0px;page-break-after: always;">&nbsp;</div>
-            <div></div>
-          </div>
-        </div>
+        <div class="comment active" lo="36" lf="36" style="">%\newpage</div>
       </div>
     </div>
     <div class="section">
@@ -1027,7 +1022,7 @@ __" class="katex-display fleqn"><span class="katex"><span class="katex-html" ari
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="160" lf="160" class="highlighted"><a name="problem-solid-sphere-with-non-uniform-charge-density" number="5" lo="160" raw="# Problem -- Solid Sphere With Non--Uniform Charge Density" class="anchor hanchor" href="#problem-solid-sphere-with-non-uniform-charge-density" lf="160"><span class="hnumber">5</span>&nbsp;<span class="htext">Problem – Solid Sphere With Non–Uniform Charge Density</span></a></h1>
+        <h1 lo="160" lf="160" class=""><a name="problem-solid-sphere-with-non-uniform-charge-density" number="5" lo="160" raw="# Problem -- Solid Sphere With Non--Uniform Charge Density" class="anchor hanchor" href="#problem-solid-sphere-with-non-uniform-charge-density" lf="160"><span class="hnumber">5</span>&nbsp;<span class="htext">Problem – Solid Sphere With Non–Uniform Charge Density</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">160</span></div>
       </div>
       <div class="block">
@@ -1065,7 +1060,7 @@ __" class="katex-display fleqn"><span class="katex"><span class="katex-html" ari
               <div class="block-info" style="display: none;"><span class="line-numbers">172-173</span></div>
             </div>
             <div class="block">
-              <div class="inline-html active" lo="174" lf="201">
+              <div class="inline-html" lo="174" lf="201">
                 <div class="solutionstrue" style="display: block;">
                   <div class="block">
                     <p padlength="0"><strong type="md">Answer</strong>: In general, <span len="32" raw="_Q_{\text{encl}} = \int \rho dv_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.8778em;vertical-align:-0.1944em;"></span><span class="mord"><span class="mord mathnormal">Q</span><span class="msupsub"><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:0.3361em;"><span style="top:-2.55em;margin-left:0em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mtight"><span class="mord text mtight"><span class="mord mtight">encl</span></span></span></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.15em;"><span></span></span></span></span></span></span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">=</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:1.1111em;vertical-align:-0.3061em;"></span><span class="mop op-symbol small-op" style="margin-right:0.19445em;position:relative;top:-0.0006em;">∫</span><span class="mspace" style="margin-right:0.1667em;"></span><span class="mord mathnormal">ρ</span><span class="mord mathnormal">d</span><span class="mord mathnormal" style="margin-right:0.03588em;">v</span></span></span></span> – enclosed charge is determined by integrating charge density over a volume. If the charge density only depends on <span len="3" raw="_r_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.4306em;"></span><span class="mord mathnormal" style="margin-right:0.02778em;">r</span></span></span></span>, we have</p>
