--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@ c-16-25.333-24-45-24-59z"></path>
             </a>
           </li>
           <li>
-            <a href="#kirchhoff-s-circuit-laws" raw="## Kirchhoff's Circuit Laws" lo="311">
+            <a href="#kirchhoff-s-circuit-laws" raw="## Kirchhoff's Circuit Laws" lo="311" class="">
               <span class="toctext">Kirchhoff’s Circuit Laws</span>
             </a>
           </li>
@@ -1707,14 +1707,14 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="311" lf="311"><a name="kirchhoff-s-circuit-laws" number="4.15" lo="311" raw="## Kirchhoff's Circuit Laws" class="anchor hanchor" href="#kirchhoff-s-circuit-laws"><span class="hnumber">4.15</span>&nbsp;<span class="htext">Kirchhoff’s Circuit Laws</span></a></h2>
+        <h2 lo="311" lf="311" class=""><a name="kirchhoff-s-circuit-laws" number="4.15" lo="311" raw="## Kirchhoff's Circuit Laws" class="anchor hanchor" href="#kirchhoff-s-circuit-laws"><span class="hnumber">4.15</span>&nbsp;<span class="htext">Kirchhoff’s Circuit Laws</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">311</span></div>
       </div>
       <div class="block">
         <ul lo="313" lf="325" class="compact">
           <li markerlength="2" padlength="0" lo="313" lf="327">
             <div class="block">
-              <p padlength="0" lo="313" lf="313">Activity - Using KVL and KCL</p>
+              <p padlength="0" lo="313" lf="313" class="">Activity - Using KVL and KCL</p>
               <div class="block-info" style="display: none;"><span class="line-numbers">313</span></div>
             </div>
             <div class="block">
@@ -1753,67 +1753,61 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="327" lf="327" class="highlighted"><a name="equivalent-resistance" number="4.16" lo="327" raw="## Equivalent Resistance" class="anchor hanchor active" href="#equivalent-resistance"><span class="hnumber">4.16</span>&nbsp;<span class="htext">Equivalent Resistance</span></a></h2>
+        <h2 lo="327" lf="327" class="highlighted"><a name="equivalent-resistance" number="4.16" lo="327" raw="## Equivalent Resistance" class="anchor hanchor" href="#equivalent-resistance"><span class="hnumber">4.16</span>&nbsp;<span class="htext">Equivalent Resistance</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">327</span></div>
       </div>
       <div class="block">
-        <ul lo="329" lf="340" class="compact">
-          <li markerlength="2" padlength="0" lo="329" lf="342">
+        <ul lo="329" lf="339" class="compact">
+          <li markerlength="2" padlength="0" lo="329" lf="339" class="">
             <div class="block">
-              <p padlength="0" lo="329" lf="329">Activity - Using KVL and KCL</p>
+              <p padlength="0" lo="329" lf="329" class="">Activity - Using KVL and KCL</p>
               <div class="block-info" style="display: none;"><span class="line-numbers">329</span></div>
             </div>
             <div class="block">
-              <ul lo="330" lf="340" class="compact">
-                <li markerlength="2" padlength="0" lo="330" lf="330">
+              <ul lo="330" lf="339" class="compact">
+                <li markerlength="2" padlength="0" lo="330" lf="334" class="">
                   <div class="block">
-                    <p padlength="0" lo="330" lf="330"><a href="Equivalent_Resistance/README.html">Instructor notes</a></p>
-                    <div class="block-info" style="display: none;"><span class="line-numbers">330</span></div>
+                    <p padlength="0" lo="330" lf="334" class="active">Documents: | <a href="Equivalent_Resistance/Equivalent_Resistance.pdf">pdf</a> | <a href="Equivalent_Resistance/Equivalent_Resistance-solutions.pdf">pdf solns</a> | <a href="Equivalent_Resistance/Equivalent_Resistance.html">html</a> | </p>
+                    <div class="block-info" style="display: none;"><span class="line-numbers">330-334</span></div>
                   </div>
                 </li>
-                <li markerlength="2" padlength="0" lo="331" lf="335">
+                <li markerlength="2" padlength="0" lo="335" lf="339" class="">
                   <div class="block">
-                    <p padlength="0" lo="331" lf="335">Documents: | <a href="Equivalent_Resistance/Equivalent_Resistance.pdf">pdf</a> | <a href="Equivalent_Resistance/Equivalent_Resistance-solutions.pdf">pdf solns</a> | <a href="Equivalent_Resistance/Equivalent_Resistance.html">html</a> | </p>
-                    <div class="block-info" style="display: none;"><span class="line-numbers">331-335</span></div>
-                  </div>
-                </li>
-                <li markerlength="2" padlength="0" lo="336" lf="342">
-                  <div class="block">
-                    <p padlength="0" lo="336" lf="340">Source Files: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Equivalent_Resistance">Github</a> | <a href="Equivalent_Resistance/Equivalent_Resistance.md!" target="_blank">Markdown</a> |</p>
-                    <div class="block-info" style="display: none;"><span class="line-numbers">336-340</span></div>
+                    <p padlength="0" lo="335" lf="339" class="">Source Files: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Equivalent_Resistance">Github</a> | <a href="Equivalent_Resistance/Equivalent_Resistance.md">Markdown</a> |</p>
+                    <div class="block-info" style="display: none;"><span class="line-numbers">335-339</span></div>
                   </div>
                 </li>
               </ul>
-              <div class="block-info" style="display: none;"><span class="line-numbers">330-340</span></div>
+              <div class="block-info" style="display: none;"><span class="line-numbers">330-339</span></div>
             </div>
           </li>
         </ul>
-        <div class="block-info" style="display: none;"><span class="line-numbers">329-340</span></div>
+        <div class="block-info" style="display: none;"><span class="line-numbers">329-339</span></div>
       </div>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="342" lf="342"><a name="rc-circuits" number="4.17" lo="342" raw="## RC Circuits" class="anchor hanchor" href="#rc-circuits"><span class="hnumber">4.17</span>&nbsp;<span class="htext">RC Circuits</span></a></h2>
+        <h2 lo="341" lf="341"><a name="rc-circuits" number="4.17" lo="341" raw="## RC Circuits" class="anchor hanchor" href="#rc-circuits" lf="341"><span class="hnumber">4.17</span>&nbsp;<span class="htext">RC Circuits</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">342</span></div>
       </div>
       <div class="block">
-        <ul lo="344" lf="354" class="compact">
-          <li markerlength="2" padlength="0" lo="344" lf="356">
+        <ul lo="343" lf="353" class="compact">
+          <li markerlength="2" padlength="0" lo="343" lf="355">
             <div class="block">
-              <p padlength="0" lo="344" lf="344">Activity</p>
+              <p padlength="0" lo="343" lf="343">Activity</p>
               <div class="block-info" style="display: none;"><span class="line-numbers">344</span></div>
             </div>
             <div class="block">
-              <ul lo="345" lf="354" class="compact">
-                <li markerlength="2" padlength="0" lo="345" lf="349">
+              <ul lo="344" lf="353" class="compact">
+                <li markerlength="2" padlength="0" lo="344" lf="348">
                   <div class="block">
-                    <p padlength="0" lo="345" lf="349">Documents: | <a href="RC_Circuits/RC_Circuits.pdf">pdf</a> | <a href="RC_Circuits/RC_Circuits-solutions.pdf">pdf solns</a> | <a href="RC_Circuits/RC_Circuits.html">html</a> |</p>
+                    <p padlength="0" lo="344" lf="348">Documents: | <a href="RC_Circuits/RC_Circuits.pdf">pdf</a> | <a href="RC_Circuits/RC_Circuits-solutions.pdf">pdf solns</a> | <a href="RC_Circuits/RC_Circuits.html">html</a> |</p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">345-349</span></div>
                   </div>
                 </li>
-                <li markerlength="2" padlength="0" lo="350" lf="356">
+                <li markerlength="2" padlength="0" lo="349" lf="355">
                   <div class="block">
-                    <p padlength="0" lo="350" lf="354">Source Files: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/RC_Circuits">Github</a> | <a href="RC_Circuits/RC_Circuits.md!" target="_blank">Markdown</a> |</p>
+                    <p padlength="0" lo="349" lf="353">Source Files: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/RC_Circuits">Github</a> | <a href="RC_Circuits/RC_Circuits.md!" target="_blank">Markdown</a> |</p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">350-354</span></div>
                   </div>
                 </li>
@@ -1827,33 +1821,33 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="356" lf="356"><a name="lorentz-force-law" number="4.18" lo="356" raw="## Lorentz Force Law" class="anchor hanchor" href="#lorentz-force-law"><span class="hnumber">4.18</span>&nbsp;<span class="htext">Lorentz Force Law</span></a></h2>
+        <h2 lo="355" lf="355"><a name="lorentz-force-law" number="4.18" lo="355" raw="## Lorentz Force Law" class="anchor hanchor" href="#lorentz-force-law" lf="355"><span class="hnumber">4.18</span>&nbsp;<span class="htext">Lorentz Force Law</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">356</span></div>
       </div>
       <div class="block">
-        <ul lo="358" lf="369" class="compact">
-          <li markerlength="2" padlength="0" lo="358" lf="371">
+        <ul lo="357" lf="368" class="compact">
+          <li markerlength="2" padlength="0" lo="357" lf="370">
             <div class="block">
-              <p padlength="0" lo="358" lf="358">Activity - Lorentz Force on Charged Particles</p>
+              <p padlength="0" lo="357" lf="357">Activity - Lorentz Force on Charged Particles</p>
               <div class="block-info" style="display: none;"><span class="line-numbers">358</span></div>
             </div>
             <div class="block">
-              <ul lo="359" lf="369" class="compact">
-                <li markerlength="2" padlength="0" lo="359" lf="359">
+              <ul lo="358" lf="368" class="compact">
+                <li markerlength="2" padlength="0" lo="358" lf="358">
                   <div class="block">
-                    <p padlength="0" lo="359" lf="359"><a href="Lorentz_Force/README.html">Instructor notes</a></p>
+                    <p padlength="0" lo="358" lf="358"><a href="Lorentz_Force/README.html">Instructor notes</a></p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">359</span></div>
                   </div>
                 </li>
-                <li markerlength="2" padlength="0" lo="360" lf="364">
+                <li markerlength="2" padlength="0" lo="359" lf="363">
                   <div class="block">
-                    <p padlength="0" lo="360" lf="364">Documents: | <a href="Lorentz_Force/Lorentz_Force.pdf">pdf</a> | <a href="Lorentz_Force/Lorentz_Force-solutions.pdf">pdf solns</a> | <a href="Lorentz_Force/Lorentz_Force.html">html</a> |</p>
+                    <p padlength="0" lo="359" lf="363">Documents: | <a href="Lorentz_Force/Lorentz_Force.pdf">pdf</a> | <a href="Lorentz_Force/Lorentz_Force-solutions.pdf">pdf solns</a> | <a href="Lorentz_Force/Lorentz_Force.html">html</a> |</p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">360-364</span></div>
                   </div>
                 </li>
-                <li markerlength="2" padlength="0" lo="365" lf="371">
+                <li markerlength="2" padlength="0" lo="364" lf="370">
                   <div class="block">
-                    <p padlength="0" lo="365" lf="369">Source Files: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Lorentz_Force">Github</a> | <a href="Lorentz_Force/Lorentz_Force.md!" target="_blank">Markdown</a> |</p>
+                    <p padlength="0" lo="364" lf="368">Source Files: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Lorentz_Force">Github</a> | <a href="Lorentz_Force/Lorentz_Force.md!" target="_blank">Markdown</a> |</p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">365-369</span></div>
                   </div>
                 </li>
@@ -1867,21 +1861,21 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="371" lf="371"><a name="lorentz-force-law-on-wires" number="4.19" lo="371" raw="## Lorentz Force Law on Wires" class="anchor hanchor" href="#lorentz-force-law-on-wires"><span class="hnumber">4.19</span>&nbsp;<span class="htext">Lorentz Force Law on Wires</span></a></h2>
+        <h2 lo="370" lf="370"><a name="lorentz-force-law-on-wires" number="4.19" lo="370" raw="## Lorentz Force Law on Wires" class="anchor hanchor" href="#lorentz-force-law-on-wires" lf="370"><span class="hnumber">4.19</span>&nbsp;<span class="htext">Lorentz Force Law on Wires</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">371</span></div>
       </div>
       <div class="block">
-        <ul lo="373" lf="383" class="compact">
-          <li markerlength="2" padlength="0" lo="373" lf="378">
+        <ul lo="372" lf="382" class="compact">
+          <li markerlength="2" padlength="0" lo="372" lf="377">
             <div class="block">
-              <p padlength="0" lo="373" lf="373">Activity - Lorentz Force on Wires</p>
+              <p padlength="0" lo="372" lf="372">Activity - Lorentz Force on Wires</p>
               <div class="block-info" style="display: none;"><span class="line-numbers">373</span></div>
             </div>
             <div class="block">
-              <ul lo="374" lf="378" class="compact">
-                <li markerlength="2" padlength="0" lo="374" lf="378">
+              <ul lo="373" lf="377" class="compact">
+                <li markerlength="2" padlength="0" lo="373" lf="377">
                   <div class="block">
-                    <p padlength="0" lo="374" lf="378">Documents: | <a href="Lorentz_Force_Wires/Lorentz_Force_Wires.pdf">pdf</a> | <a href="Lorentz_Force_Wires/Lorentz_Force_Wires-solutions.pdf">pdf solns</a> | <a href="Lorentz_Force_Wires/Lorentz_Force_Wires.html">html</a> |</p>
+                    <p padlength="0" lo="373" lf="377">Documents: | <a href="Lorentz_Force_Wires/Lorentz_Force_Wires.pdf">pdf</a> | <a href="Lorentz_Force_Wires/Lorentz_Force_Wires-solutions.pdf">pdf solns</a> | <a href="Lorentz_Force_Wires/Lorentz_Force_Wires.html">html</a> |</p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">374-378</span></div>
                   </div>
                 </li>
@@ -1889,9 +1883,9 @@ c-16-25.333-24-45-24-59z"></path>
               <div class="block-info" style="display: none;"><span class="line-numbers">374-378</span></div>
             </div>
           </li>
-          <li markerlength="2" padlength="0" lo="379" lf="385">
+          <li markerlength="2" padlength="0" lo="378" lf="384">
             <div class="block">
-              <p padlength="0" lo="379" lf="383">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Lorentz_Force_Wires">Github</a> | <a href="Lorentz_Force_Wires/Lorentz_Force_Wires.md!" target="_blank">Markdown</a> | </p>
+              <p padlength="0" lo="378" lf="382">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Lorentz_Force_Wires">Github</a> | <a href="Lorentz_Force_Wires/Lorentz_Force_Wires.md!" target="_blank">Markdown</a> | </p>
               <div class="block-info" style="display: none;"><span class="line-numbers">379-383</span></div>
             </div>
           </li>
@@ -1901,13 +1895,13 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="385" lf="385"><a name="the-biot-savart-law" number="4.20" lo="385" raw="## The Biot--Savart law" class="anchor hanchor" href="#the-biot-savart-law"><span class="hnumber">4.20</span>&nbsp;<span class="htext">The Biot–Savart law</span></a></h2>
+        <h2 lo="384" lf="384"><a name="the-biot-savart-law" number="4.20" lo="384" raw="## The Biot--Savart law" class="anchor hanchor" href="#the-biot-savart-law" lf="384"><span class="hnumber">4.20</span>&nbsp;<span class="htext">The Biot–Savart law</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">385</span></div>
       </div>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="387" lf="387"><a name="rlc-and-ac-circuits" number="4.21" lo="387" raw="## RLC and AC Circuits" class="anchor hanchor" href="#rlc-and-ac-circuits"><span class="hnumber">4.21</span>&nbsp;<span class="htext">RLC and AC Circuits</span></a></h2>
+        <h2 lo="386" lf="386"><a name="rlc-and-ac-circuits" number="4.21" lo="386" raw="## RLC and AC Circuits" class="anchor hanchor" href="#rlc-and-ac-circuits" lf="386"><span class="hnumber">4.21</span>&nbsp;<span class="htext">RLC and AC Circuits</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">387</span></div>
       </div>
     </div>
